# RayTracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: main.cc
src/include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rt.h  sphere.h  timer.h  vec3.h
